--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 <div class="container py-4">
         <div id="mainDiv" class="container d-flex flex-column justify-content-center align-items-center gap-3 py-3" style="overflow-x: hidden;">
 
-            <div class="card shadow-sm border-0" style="width: 13rem; cursor:pointer" onclick="showCategory('coffee')">
+            <div class="card" onclick="showCategory('coffee')">
                 <img class="card-img-top" src="img/coffee_cover.jpg" alt="Card image cap" />
                 <div class="card-body">
                     <h2 id="titleCoffee" class="card-text fw-bolder">Coffee</h2>
                 </div>
             </div>
-            <div class="card shadow-sm border-0" style="width: 13rem; cursor:pointer" onclick="showCategory('alcoholic')">
+            <div class="card"  onclick="showCategory('alcoholic')">
                 <img class="card-img-top" src="img/coctail.jpg" alt="Card image cap" />
                 <div class="card-body">
                     <h2 id="titleAlcoholic" class="card-text fw-bolder">Alcoholic</h2>
                 </div>
             </div>
-            <div class="card card shadow-sm border-0" style="width: 13rem; flex-shrink: 0;">
+            <div class="card" >
                 <img class="card-img-top" src="img/juices.jpg" alt="Card image cap" />
                 <div class="card-body">
                     <h2 id="titleNonAlcoholic" class="card-text fw-bolder">Non Alcoholic</h2>
