--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-dark bg-black px-3" id="header">
+<nav class="navbar navbar-dark bg-black px-3 sticky-top" id="header">
     <div class="container-fluid d-flex justify-content-between align-items-center">
         <div class="d-flex align-items-center gap-3">
             <button id="backBtn" class="btn text-white btn-dark fs-4" style="background-color: black; border: none">
