--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 
     <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
@@ -67,8 +68,12 @@
         </div>
 
     <div id="categoryView" class="d-none flex-column align-items-center gap-3 py-3"></div>
-
 </div>
+<footer id="footer">
+    <a href="https://www.instagram.com/kvartbar/" target="_blank" class="insta-link">
+        <i class="fab fa-instagram"></i> <span>@KvartBar</span>
+    </a>
+</footer>
 
 
 
