added items and new photos

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                 </div>
             </div>
             <div class="card"  onclick="showCategory('alcoholic')">
-                <img class="card-img-top" src="img/coctail.jpg" alt="Card image cap" loading="lazy"  />
+                <img class="card-img-top" src="img/alcoholicDrinks/coctails/coctail.jpg" alt="Card image cap" loading="lazy"  />
                 <div class="card-body">
                     <h2 id="titleAlcoholic" class="card-text fw-bolder">Alcoholic</h2>
                 </div>
             </div>
             <div class="card" onclick="showCategory('nonAlcoholic')">
-                <img class="card-img-top" src="img/juices.jpg" alt="Card image cap" loading="lazy"  />
+                <img class="card-img-top" src="img/nonAlcoholic/juices/sofrDrinksCover.jpg" alt="Card image cap" loading="lazy"  />
                 <div class="card-body">
                     <h2 id="titleNonAlcoholic" class="card-text fw-bolder">Non Alcoholic</h2>
                 </div>
