added cocktail list, changed photos and added protein category

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
                     <h2 id="titleNonAlcoholic" class="card-text fw-bolder">Non Alcoholic</h2>
                 </div>
             </div>
+
+            <div class="card" onclick="showCategory('proteins')">
+                <img class="card-img-top" src="img/proteins/proteiniCover.jpg" alt="Card image cap" loading="lazy"  />
+                <div class="card-body">
+                    <h2 id="titleProteins" class="card-text fw-bolder">Proteins</h2>
+                </div>
+            </div>
         </div>
 
     <div id="categoryView" class="d-none flex-column align-items-center gap-3 py-3"></div>
