changes in menu items and added new category of appetizers

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
                     <h2 id="titleProteins" class="card-text fw-bolder">Proteins</h2>
                 </div>
             </div>
+            <div class="card" onclick="showCategory('appetizers')">
+                <img class="card-img-top" src="img/appetizers/appetizers.jpg" alt="Card image cap" loading="lazy"  />
+                <div class="card-body">
+                    <h2 id="titleAppetizers" class="card-text fw-bolder">Appetizers</h2>
+                </div>
+            </div>
         </div>
 
     <div id="categoryView" class="d-none flex-column align-items-center gap-3 py-3"></div>
